# pedestrian-data-mlm-labeling

./: .gitignore  README.md  pyproject.toml  run_pipeline.sh
.dvc/: config
analysis/: bounding_box_analysis_v2.ipynb  compute_projections.py  compute_text_embeddings.py  explore_pedestrian_affordances.ipynb
data/: package.dvc
data/processed/: .gitignore  images_hashed.dvc
data_cleaning/: clean_scene_graph.py  repair_missing_fields_llm.py  repair_scene_graph_llm.py  validate_dataset.py
image_annotating/: categories.yaml  import_images.py  run_mlm_labels.py
packaging/: DATASET_SPEC.md  build_packaged_dataset.py
