[project]
name = "pedestrian-data-mlm-labeling"
version = "0.1.0"
description = "LLM-assisted labeling and analysis pipeline for pedestrian datasets."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash>=3.3.0",
    "google-genai>=1.51.0",
    "matplotlib>=3.10.7",
    "nbformat>=5.10.4",
    "networkx>=3.5",
    "numpy>=2.2.6",
    "openai>=2.8.1",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "plotly>=6.5.0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "umap-learn>=0.5.9.post2",
]
